discussion/platform.ui/170931/170931_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Bug 549929 - fixed javadoc errors

Fixed javadoc errors reported in
https://download.eclipse.org/eclipse/downloads/drops4/I20201018-1800/logs.php#javadoc

../../../eclipse.platform.ui/bundles/org.eclipse.ui.workbench/Eclipse
UI/org/eclipse/ui/plugin/AbstractUIPlugin.java:176: error: unexpected
content
	 * @deprecated @see {@link
PlatformUI#getDialogSettingsProvider(Bundle)}
	               ^
../../../eclipse.platform.ui/bundles/org.eclipse.ui.workbench/Eclipse
UI/org/eclipse/ui/plugin/AbstractUIPlugin.java:398: error: reference not
found
	 * @deprecated @see DialogSettingsService
	                    ^
2 errors

Change-Id: I5256e800670a4c0f27e5b2b008ec8f855f09b3ca
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Andrey Loskutov
Date: 2020-10-19 12:10:08.000000000
Message: 
Patch Set 2: Commit message was updated.
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2020-10-19 12:10:18.000000000
Message: 
Patch Set 2:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2020-10-19 12:10:40.000000000
Message: 
Patch Set 2:

Build Started https://ci.eclipse.org/platform/job/eclipse.platform.ui-Gerrit/24047/
----------------------------------------------------------------------------------------------------------------------
Author: Wim Jongman
Date: 2020-10-19 12:17:05.000000000
Message: 
Patch Set 2:

Thanks. I did not look for javadoc warnings in the Gerrit build. I will do so next time.
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2020-10-19 12:49:38.000000000
Message: 
Patch Set 2: Verified+1

Build Successful 

https://ci.eclipse.org/platform/job/eclipse.platform.ui-Gerrit/24047/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2020-10-19 13:23:12.000000000
Message: 
Patch Set 2: Code-Review+2

> Patch Set 2:
> 
> Thanks. I did not look for javadoc warnings in the Gerrit build. I will do so next time.

I recommend everyone to check *test results* after every patch, especially in the central code, because sometimes other modules are also affected by "unrelated" changes not seen by module gerrit test.

For javadoc, we have releng tests, which failed yesterday, see https://download.eclipse.org/eclipse/downloads/drops4/I20201018-1800/testresults/html/org.eclipse.releng.tests_ep418I-unit-cen64-gtk3-java11_linux.gtk.x86_64_11.html
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2020-10-19 13:23:21.000000000
Message: 
Change has been successfully merged by Andrey Loskutov
----------------------------------------------------------------------------------------------------------------------
